--- a/native_library/android/FacebookANE/build.gradle
+++ b/native_library/android/FacebookANE/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.40'
-    ext.frekotlin_version = '1.8.0-beta1'
+    ext.frekotlin_version = '1.8.0'
     ext.gson_version = '2.8.4'
     ext.facebook_version = '5.1.0'
     repositories {
@@ -11,7 +11,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
