--- a/native_library/android/FacebookANE/app/build.gradle
+++ b/native_library/android/FacebookANE/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
@@ -32,6 +31,7 @@ dependencies {
     implementation "com.tuarua:FreKotlin:$frekotlin_version"
     implementation "com.facebook.android:facebook-android-sdk:$facebook_version"
     implementation "com.facebook.android:facebook-share:$facebook_version"
+    implementation "com.facebook.android:facebook-login:$facebook_version"
 }
 repositories {
     mavenCentral()
